tests/fail/include-directives/source.lart
include <treesitter/api>;
include "hello";
